<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FEBF73">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/laytbtns"
                style="?android:attr/buttonBarStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">

                <Button
                    android:id="@+id/button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:background="#1E90FF"
                    android:drawableLeft="@drawable/ic_pie_chart_black_24dp"
                    android:drawableStart="@drawable/ic_pie_chart_black_24dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="0dp"

                    android:paddingStart="25dp"
                    android:text="@string/app1"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:background="#1E90FF"
                    android:drawableLeft="@drawable/ic_subject_black_24dp"
                    android:drawableStart="@drawable/ic_subject_black_24dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="0dp"
                    android:paddingStart="25dp"
                    android:text="@string/app"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:text="@string/RecNonRec"></com.github.mikephil.charting.charts.PieChart>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/RecNonRec"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </FrameLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/chart1"
                        android:layout_width="match_parent"
                        android:layout_margin="5dp"
                        android:layout_height="200dp">
                    </com.github.mikephil.charting.charts.PieChart>

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/HecNec"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </FrameLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/chart2"
                        android:layout_width="match_parent"
                        android:layout_margin="5dp"
                        android:layout_height="200dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"></com.github.mikephil.charting.charts.PieChart>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/Single"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </FrameLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/chart3"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"></com.github.mikephil.charting.charts.PieChart>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/nego"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </FrameLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
